Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-7158

Incorrect init of HdfsScanNodeBase::progress_

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Minor
    • Resolution: Fixed
    • None
    • Impala 2.13.0, Impala 3.1.0
    • Backend
    • None
    • ghx-label-9

    Description

      I was digging into something else and came across this. The initialization of the scan split progress is incorrect 

      Status HdfsScanNodeBase::Open(RuntimeState* state) {
        RETURN_IF_ERROR(ScanNode::Open(state));
        .
        .
        progress_.Init(Substitute("Splits complete (node=$0)", total_splits),total_splits);
        return Status::OK();
      }

      It should be progress_.Init(Substitute("Splits complete (node=$0)", id_),total_splits); instead

      Attachments

        Activity

          People

            bharathv Bharath Vissapragada
            bharathv Bharath Vissapragada
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: