IMPALA-7158: Fix HdfsScanNodeBase::progress_'s init

(Testing) Verified that the correct node id is being logged
with this patch and --v=2.

Change-Id: Id2a738edea80ff3fb13ff368b4093c8b4ef34df7
Reviewed-on: http://gerrit.cloudera.org:8080/10672
Reviewed-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>